--- a/manifests/kustomize/base/cache-deployer/kustomization.yaml
+++ b/manifests/kustomize/base/cache-deployer/kustomization.yaml
@@ -9,3 +9,4 @@ commonLabels:
 images:
   - name: gcr.io/ml-pipeline/cache-deployer
     newTag: 1.7.0
+    newName: deep-arena-store:5000/ml-pipeline/cache-deployer
