--- a/manifests/kustomize/base/pipeline/metadata-writer/kustomization.yaml
+++ b/manifests/kustomize/base/pipeline/metadata-writer/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
 images:
   - name: gcr.io/ml-pipeline/metadata-writer
     newTag: 1.7.0
+    newName: deep-arena-store:5000/ml-pipeline/metadata-writer
